option java_package = "tajo.engine";
option java_outer_classname = "ClientServiceProtos";
option java_generic_services = false;
option java_generate_equals_and_hash = true;

import "tajo_protos.proto";
import "CatalogProtos.proto";

message ExecuteQueryRequest {
    required string query = 1;
}

message ExecuteQueryRespose {
    required string path = 1;
    required int64 responseTime = 2;
}

message CreateTableRequest {
    required string name = 1;
    required string path = 2;
    required TableProto meta = 3;
}

message CreateTableResponse {
    required TableDescProto desc = 1;
}

message AttachTableRequest {
    required string name = 1;
    required string path = 2;
}

message AttachTableResponse {
    required TableDescProto desc = 1;
}

message GetClusterInfoRequest {
}

message GetClusterInfoResponse {
    repeated string serverName = 1;
}

message GetTableListRequest {
}

message GetTableListResponse {
    repeated string tables = 1;
}